--------------------------------------------------------------------------------
Changes for 2.0.0rc3

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.0.0rc2

New features:
A.F....... [ZBXNEXT-1149] import of nested maps, import form redesign (Vedmak)
........S. [ZBXNEXT-744] added support of {ITEM.ID} and {TRIGGER.EXPRESSION} macros in notifications and commands (Sasha)
A.F....... [ZBXNEXT-914] redesign Administration->DM (Eduard)

Bug fixes:
..F....... [ZBX-4788] fixed trigger severity being reset when changing dependencies via mass update (Sasha)
..F....... [ZBX-4787] fixed graph axis item selection popup shows only monitored hosts (Vedmak)
..F....... [ZBX-4779] fixed new groups import (Vedmak)
..F....... [ZBX-4775] fixed discovery rules import (Vedmak)
..F....... [ZBX-4700] fixed errors in item list when using interface related macro in template item key (Vedmak)
..F....... [ZBX-4761] fixed "&" escaping in form inputs (Pavels)
.......PS. [ZBX-4749] fixed proxy crash on exit when deleting trend cache (dimir)
..F....... [ZBX-4778] fixed port field validation in creating discovery rule (Toms)
A......... [ZBX-4621] fixed macro update using host.massupdate (Vedmak)
A.F....... [ZBX-4697] fixed error when massupdate group for hosts that belongs to different groups (Vedmak)
A.F....... [ZBX-4257] fixed creating discovery rules, items and item prototypes (Pavels)
..F....... [ZBX-4765] fixed filter fields being unset when saving of discovery rule fails (Vedmak)
..F....... [ZBX-4736] fixed undefined variable in Inventory Hosts (Toms)
..F....... [ZBX-4764] fixed critical error in Administration->Notifications (Toms)
..F....... [ZBX-4753] properly pluralized "Last n issues" message in dashboard (Vedmak)
..F....... [ZBX-3613] updated notification sounds; fixed sound playback in profile (Toms, Vedmak)
..F....... [ZBX-4713] fixed ACK status for triggers visible in Dashboard and Screens (Toms)